<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/InputPoints"
        android:hint="@string/EnterPointsBeginning"
        android:inputType="numberSigned" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnterPointsString"
        android:id="@+id/EnterPoints" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UndoLastInput"
        android:id="@+id/UndoButton" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/horizontalScrollView" >

        <!--suppress CheckTagEmptyBody -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/PlayerActivityLayout"></LinearLayout>
    </HorizontalScrollView>

</LinearLayout>
